src/components/layout.scss
/* ... */
.newsletterOnNewsDetail {
  .hs-email {
    position: relative;
  }
  .hs-submit {
    position: absolute;
    top: 10px;
    right: 12px;
    input {
      padding: 14px 40px !important;
      font-weight: normal;
    }
    @media (max-width: 576px) {
      position: inherit;
      right: 0;
    }
  }
  .hs-recaptcha {
    display: none;
  }
  .submitted-message {
    position: relative;
    padding-left: 32px;
  }
  .submitted-message:before {
    background: url('/images/icon-check.svg');
    width: 20px;
    height: 20px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    content: '';
  }
  .popupTitle {
    position: relative;
    padding-left: 48px;
    margin-bottom: 32px;
    @media (max-width: 767px) {
      font-size: 24px;
      line-height: 36px;
    }
    @media (max-width: 479px) {
      font-size: 20px;
      line-height: 26px;
    }
  }
  .popupTitle:before {
    background: url('/images/telegram.svg');
    width: 33px;
    height: 33px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    content: '';
    background-repeat: no-repeat;
  }
  ul.inputs-list {
    list-style: none;
    margin: 0;
    .hs-form-checkbox-display {
      display: flex;
      align-items: center;
      input {
        width: 20px;
        margin-right: 16px;
      }
      span {
        color: #24272a;
        font-weight: normal;
        .dark-mode & {
          color: #fff;
        }
      }
    }
  }
  .hs-form-field.hs-email {
    input,
    input:focus-visible {
      border-color: #cdd6e1;
      outline: none;
      border-radius: 50px;
      padding: 20px 16px;
      height: auto;
      @media (max-width: 576px) {
        padding: 12px 16px;
      }
    }
    input:focus {
      border-color: #037dd6;
    }
    > label {
      display: none;
    }
  }
  .hs-submit input[type='submit'].hs-button {
    border-radius: 50px;
    background-color: #037dd6;
  }
  .hs-fieldtype-checkbox.hs-form-field > label {
    margin-bottom: 32px;
    color: #24272a;
    font-weight: normal;
    .dark-mode & {
      color: #fff;
    }
  }
}

.arrowAnimation {
  width: 30px;
  display: inline-grid;
  &:after {
    background-image: url('/images/arrow-right-black.svg');
    background-position: center;
    background-size: contain;
    width: 20px;
    height: 25px;
    content: '';
    font-size: 20px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
    transition: ease 0.3s all;
    position: absolute;
    top: 50%;
    transform: translateY(-52%);
  }
  .dark-mode &:after {
    background-image: url('/images/arrow-right-white.svg');
  }
  .dark-mode .snapsLiveMetaMaskFlask &:after {
    background-image: url('/images/arrow-right-black.svg');
  }
}

.beta-text {
  color: #037DD6;
  font-weight: 600;
  font-size: 13px;
  line-height: 32px;
  margin-left: 10px;
  position: absolute;

  @media (max-width: 767px) {
    line-height: 28px;
  }
}

body.dark-mode .hide-on-darkmode {
  display: none !important;
}

body.light-mode .hide-on-lightmode {
  display: none !important;
}

body.dark-mode .white-on-darkmode {
  color: #FFF;
}

img.with-shadow {
  filter: drop-shadow(-16.1252px 16.1252px 25.8003px rgba(0, 0, 0, 0.05)) drop-shadow(-3.22503px 3.22503px 10.7501px rgba(0, 0, 0, 0.07));
}

.mw-453-desktop {
  @media (min-width: 768px) {
    max-width: 453px;
  }
}

